fix section heading order on smaller screens

--- a/assets/scss/_sections.scss
+++ b/assets/scss/_sections.scss
@@ -33,6 +33,11 @@
       margin-top: 0.5em;
       text-align: right; 
       padding-bottom: 1em;
+      span{ 
+        float: right; 
+        margin-right: 0;
+        margin-left: 1em;
+      }
     }
   }
 
